--- a/OC.Tool/OC.Tool/Info.plist
+++ b/OC.Tool/OC.Tool/Info.plist
@@ -37,5 +37,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>app想要访问您的相册</string>
 </dict>
 </plist>
